<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutSopa2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSopaLabel2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/sopa" />

            <TextView
                android:id="@+id/textViewSopa2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutPratoCarne2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPratoCarneLabel2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/pratoCarne" />

            <TextView
                android:id="@+id/textViewPratoCarne2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutPratoPeixe2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPratoPeixeLabel2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/pratoPeixe" />

            <TextView
                android:id="@+id/textViewPratoPeixe2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSobremesa2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSobremesaLabel2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/sobremesa" />

            <TextView
                android:id="@+id/textViewSobremesa2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/buttonSair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="onClick"
        android:text="@string/sair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>